indentation-c-style: Fix modeline in plugin.c

The correct modeline for using spaces is "indent-tabs-mode: nil;" and not
"indent-spaces-mode: t;".

https://bugzilla.gnome.org/show_bug.cgi?id=688275